Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-12794

Fix broken logic in LocalSetJob()

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.8
    • Win32SS

    Description

      CID 1401260
      Right now the nested If(Level) will fail for Level = 0 letting unset the dwErrorCode.
      Substitute these nested ifs with a switch case which cleans the logic and also handles the "0" case setting it to ERROR_INVALID_LEVEL.

      Attachments

        1. jobs.c.patch
          0.9 kB
        2. jobs.c.patch
          1.0 kB

        Activity

          People

            Colin Finck Colin Finck
            vicmarcal vicmarcal
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: