[LOCALSPL] Fix parameter handling in LocalSetJob and add tests for the few ways we can easily test this function.

Yes, it checks the input handle and doesn't fail if an invalid level is given, because someone may still send a Command.
This also fixes CORE-12794. Thanks for reporting!